--- a/www/subdom/member/css/mobile.css
+++ b/www/subdom/member/css/mobile.css
@@ -5,6 +5,6 @@
   #text h1 {top: 0; left: 1ex;}
   #top img {display: none;}
   #top h1 {margin-top: 1ex;}
-  #top #visible {display: none;}
+  #top #profile {display: none;}
 
   table#items .post, table#items .count {display: none}
