--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -4,12 +4,13 @@
 <link rel="stylesheet" href="{$basePath}/css/jquery-ui.custom.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
-#frm-akceForm textarea { width: 100%;}
-#frm-akceForm p { line-height: 1.5em; margin: 1ex 0px; }
-#frm-akceForm label { font-weight: bold; margin-right: 1ex; font-size: 0.9em }
-#frm-akceForm .date, #frm-akceForm .time { text-align: center; }
-h2 { margin-top: 1ex }
-#ui-datepicker-div { font-size: 0.9em; }
+	#frm-akceForm textarea { width: 100%;}
+	#frm-akceForm p { line-height: 1.5em; margin: 1ex 0px; }
+	#frm-akceForm label { font-weight: bold; margin-right: 1ex; font-size: 0.9em }
+	#frm-akceForm .date, #frm-akceForm .time { text-align: center; }
+	h2 { margin-top: 1ex }
+	#ui-datepicker-div { font-size: 0.9em; }
+	.perex { width: 98%}
 </style>
 
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
