--- a/app/MemberModule/templates/Member.view.latte
+++ b/app/MemberModule/templates/Member.view.latte
@@ -1,8 +1,8 @@
 {block #head}
 <style type="text/css" n:syntax="off">
-#photo {margin-right: 1em; margin-bottom: 1em;}
-.out {margin-left: 1em;}
-#member {width: 75%;}
+	#photo { margin-right: 1em; margin-bottom: 1em;}
+	.out { margin-left: 1em;}
+	#member { width: 75%;}
 </style>
 {/block}
 
@@ -10,12 +10,11 @@
 
 {block #content}
 <ul class="buttonMenu">
-<li><a n:if="$user->isInRole($presenter->name) or $member->id==$user->getId()" class="buttonLike" n:href="edit,$member->id"><span class="icon-pencil"></span> editovat</a></li>
-<li><a n:if="$user->isInRole($presenter->name)" class="buttonLike" n:href="delete,$member->id"><span class="icon-trash"></span> smazat</a></li>
+	<li><a n:if="$user->isInRole($presenter->name) or $member->id == $user->getId()" class="buttonLike" n:href="edit,$member->id"><span class="icon-pencil"></span> editovat</a></li>
+	<li><a n:if="$user->isInRole($presenter->name)" class="buttonLike" n:href="delete,$member->id"><span class="icon-trash"></span> smazat</a></li>
 </ul>
 
 <div n:if="$fileExists" class="float-left" id="photo"><img src="{$basePath}/img/portrets/{$member->id}.jpg" alt="fotografie"></div>
-
 
 <a class="buttonLike head" n:href="vcf, $member->id" title="stáhnout vizitku ve formátu .vfc">
 	<span class="icon-user"></span> {$member->name} {$member->surname}
@@ -29,17 +28,17 @@
 
 <h3>Adresa:</h3>
 <address class="out">
-{$member->ulice}<br>
-{$member->mesto}
+	{$member->ulice}<br>
+	{$member->mesto}
 </address>
 
 <h3>Kontakty:</h3>
 
 <p class="out"><b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></p>
-<p class="out"><b>Telefon:</b> {$member->telefon}</p>
+<p class="out"><b>Telefon:</b> {$member->telefon|number:0:'.':' '}</p>
 
 <div id="poznamka">
-{$member->text|noescape|texy}
+	{$member->text|noescape|texy}
 </div>
 
 </div>
