--- a/app/MemberModule/templates/Cron.drive.latte
+++ b/app/MemberModule/templates/Cron.drive.latte
@@ -1,5 +1,5 @@
 {if isset($files)}
 	{foreach $files as $file}
-		{$file->directory}/{$file->name}<br>
+		{$file->directory}/{$file->id}<br>
 	{/foreach}
 {/if}
