--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -3,6 +3,7 @@
 	.news { margin-top: 0; list-style-type: disc; }
 	h3 { margin-bottom: 1ex; }
 	.logged { color: #C22; }
+	.files li { list-style: none;}
 </style>
 
 {/block}
@@ -37,8 +38,8 @@ Naposledy jste byl přihlášen: <b>{$lastDate|date:'%A %d.%m.%Y %H:%M'}</b>.</p
 {/if isset($post)}
 
 {if}<h3>Dokumenty</h3>
-<ol class="news" n:inner-foreach="$dokumentyList as $file">
-	<li><a href="{$file->webViewLink}" target="_blank"
+<ol class="news files" n:inner-foreach="$dokumentyList as $file">
+	<li><img src="{$file->iconLink}" width="16" height="16" alt="{$file->mimeType}"> <a href="{$file->webViewLink}" target="_blank"
 		   title="{$file->modifiedTime|timeAgoInWords}">{$file->name}</a></li>
 </ol>
 {/if isset($file)}
